--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -11,6 +11,8 @@
     "com.unity.timeline": "1.4.8",
     "com.unity.ugui": "1.0.0",
     "com.unity.xr.interaction.toolkit": "2.3.0",
+    "com.unity.xr.management": "4.3.3",
+    "com.unity.xr.oculus": "1.13.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
